Add our 'about_me' page and shortcodes to support it.

--- a/config.toml.tmpl
+++ b/config.toml.tmpl
@@ -3,6 +3,7 @@ title = "{{ .Env.HUGO_TITLE }}"
 author = "{{ file.Read "AUTHOR" | strings.ReplaceAll "\n" "" }}"
 paginate = "{{ .Env.HUGO_PAGINATE }}"
 theme = "{{ path.Base (.Env.HUGO_THEME_REPO_URL)  }}"
+enableInlineShortcodes = true
 {{ if (file.Exists "global_keywords") -}}
 keywords = "{{ file.Read "global_keywords" | strings.ReplaceAll "\n" "," }}"
 {{- end }}
@@ -10,4 +11,4 @@ keywords = "{{ file.Read "global_keywords" | strings.ReplaceAll "\n" "," }}"
   description = "{{ .Env.HUGO_DESCRIPTION }}"
   dateFormatUse = "2018-01-01"
   twitter = "{{ .Env.TWITTER_HANDLE }}"
-  linkedin = "{{ .Evn.LINKEDIN_HANDLE }}"
+  linkedin = "{{ .Env.LINKEDIN_HANDLE }}"
