Don't commit auto-generated sites, and fix image and icon layouts in the about_me page.

--- a/layouts/shortcodes/social_about_me.html
+++ b/layouts/shortcodes/social_about_me.html
@@ -1,5 +1,10 @@
-{{- $env_key := ( printf "%s_HANDLE" (.Get "social_network" | upper ) ) -}}
-{{- $screen_name := ( getenv $env_key ) -}}
-<section id="about-me-social-banner">
-  <img src="icons/{{ .Get "social_network" }}.png" length=16 width=16 style="float: left; vertical-align: middle;"> <a href="{{ printf (.Get "url_format") $screen_name }}">{{ $screen_name }}</a>
-</section>
+{{- $social_network_env_key := ( printf "%s_HANDLE" (.Get "social_network" | upper ) ) -}}
+{{- $screen_name := ( getenv $social_network_env_key ) -}}
+<div style="padding-bottom: 3px;" id="social-network">
+  <img style="vertical-align: middle; float: left; padding-right: 10px; margin-top: 8px;"
+       src="/icons/{{ .Get "social_network" }}.png"
+       height=16px
+       width=16px
+       alt="{{ .Get "social_network" }} icon">
+  <a href="{{ printf (.Get "url_format") $screen_name }}">{{ $screen_name }}</a>
+</div>
