--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,5 @@
 {{ partial "seo_schema" . }}
+{{ template "_internal/google_analytics_async.html" . }}
 <header class="main-header">
 	<div class="main-header-content">
 		<h1 class="blog-title">
