It turns out that .Site.Author is broken with Hugo, so manually put in my name here instead.

--- a/layouts/partials/seo_schema.html
+++ b/layouts/partials/seo_schema.html
@@ -1,8 +1,8 @@
 {{ if .Site.Params.Keywords }}
 {{ if .Keywords }}
-<meta name="KEYWORDS" content="{{ .Site.Params.Keywords }},{{ .Keywords }}">
+<meta name="KEYWORDS" content="{{ .Site.Params.Keywords }},{{ range .Keywords}}{{ . }},{{ end }},writing">
 {{ else }}
-<meta name="KEYWORDS" content="{{ .Site.Params.Keywords }}">
+<meta name="KEYWORDS" content="{{ .Site.Params.Keywords }},writing">
 {{ end }}
 {{ end }}
 <script type="application/ld+json">
@@ -18,11 +18,11 @@
     "headline" : "{{ .Title }}",
     "description" : "{{ if .Description }}{{ .Description }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ end }}{{ end }}",
     "inLanguage" : "en-US",
-    "author" : "{{ range .Site.Author }}{{ . }}{{ end }}",
-    "creator" : "{{ range .Site.Author }}{{ . }}{{ end }}",
-    "publisher": "{{ range .Site.Author }}{{ . }}{{ end }}",
-    "accountablePerson" : "{{ range .Site.Author }}{{ . }}{{ end }}",
-    "copyrightHolder" : "{{ range .Site.Author }}{{ . }}{{ end }}",
+    "author" : "Carlos Nunez",
+    "creator" : "Carlos Nunez",
+    "publisher": "Carlos Nunez",
+    "accountablePerson" : "Carlos Nunez",
+    "copyrightHolder" : "Carlos Nunez",
     "copyrightYear" : "{{ .Date.Format "2006" }}",
     "datePublished": "{{ .Date }}",
     "dateModified" : "{{ .Date }}",
