--- a/layouts/shortcodes/post_image.html
+++ b/layouts/shortcodes/post_image.html
@@ -1,4 +1,27 @@
-<img src="/image/{{ .Page.Slug }}/{{.Get "name"}}"
-     height="{{ if (.Get "height") }}{{ .Get "height" }}{{ else }}100%{{ end }}"
-     width="{{ if (.Get "width") }}{{ .Get "width" }}{{ else }}100%{{ end }}"
-     alt="{{ if (.Get "height") }}{{ .Get "height" }}{{ else }}{{.Get "name"}}{{ end }}">
+{{ $photo_name := ( .Get "name" )  }}
+{{ $photo_height := ( .Get "height" ) }}
+{{ $photo_width := ( .Get "width" ) }}
+{{ $photo_alt := ( .Get "alt" ) }}
+{{ $photo_base_path := ( printf "/images/%s/%s" .Page.Slug $photo_name ) }}
+{{ $photo_path := ( printf "%s.image_not_found" $photo_base_path ) }}
+{{ if ( fileExists (printf "static/%s.png" $photo_base_path) ) }}
+  {{ $photo_path = (printf "%s.png" $photo_base_path) }}
+{{ end }}
+{{ if ( fileExists (printf "static/%s.jpg" $photo_base_path) ) }}
+  {{ $photo_path = (printf "%s.jpg" $photo_base_path) }}
+{{ end }}
+{{ if ( fileExists (printf "static/%s.tiff" $photo_base_path) ) }}
+  {{ $photo_path = (printf "%s.tiff" $photo_base_path) }}
+{{ end }}
+{{ if ( fileExists (printf "static/%s.gif" $photo_base_path) ) }}
+  {{ $photo_path = (printf "%s.gif" $photo_base_path) }}
+{{ end }}
+
+<img src="{{ $photo_path }}" {{ if (.Get "height") }} height="{{ $photo_height }}"
+     {{ end }}
+     {{ if (.Get "width") }}
+     width="{{ $photo_width }}"
+     {{ end }}
+     {{ if (.Get "alt") }}
+     alt="{{ $photo_alt }}"
+     {{ end }}>
