Add support for linking back to LinkedIn posts with the 'linkedin_url' page parameter. Posting to LinkedIn is a bit of a chicken and egg problem since the LinkedIn post URI references an ARN that we cannot deduce beforehand. I am thinking of using a flat file that tracks post slugs to LinkedIn post URLs and having pages resolve their post URLs through that, but I'm not sure if that's the best approach nor do I want to work on that right now...I'd rather write stuff. So this manual approach will work until I can find time to hack on that.

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -20,6 +20,13 @@
       {{ .Content }}
     </section>
     <footer class="post-footer">
+      {{ with .Params.linkedin_post_url }}
+      <section class="linkedin-cta">
+        <span style="color: gray; font-size: 0.8rem">
+          <em>Enjoyed this article? <strong>Join the discussion on <a href="{{ . }}">LinkedIn</a>.</strong></em>
+        </span>
+      </section>
+      {{ end }}
       {{ with .Params.tags -}}
       <section class="tags post-meta">
         Tagged
