--- a/config.toml.tmpl
+++ b/config.toml.tmpl
@@ -16,10 +16,11 @@ googleAnalytics = "{{ .Env.HUGO_GOOGLEANALYTICS }}"
   linkedin = "{{ .Env.LINKEDIN_HANDLE }}"
   author = "{{ file.Read "AUTHOR" | strings.ReplaceAll "\n" "" }}"
   googleSearchVerificationCode = "{{ .Env.HUGO_GOOGLE_SEARCH_VERIFICATION_CODE }}"
+[taxonomies]
+  keywords = "keywords"
 [menu]
   [[ menu.main ]]
-    identifier = "about-me"
-    name = "About Me"
+    identifier = "about-me" name = "About Me"
     url = "/about-me"
     weight = -10
 
