--- a/config.toml.tmpl
+++ b/config.toml.tmpl
@@ -49,3 +49,10 @@ googleAnalytics = "{{ .Env.HUGO_GOOGLEANALYTICS }}"
     pre = "<img src=/icons/twitter.png height=16px weight=16px>"
     url = "https://twitter.com/@{{ .Env.TWITTER_HANDLE }}"
     weight = -6
+
+  [[ menu.main ]]
+    identifier = "github"
+    name = "GitHub"
+    pre = "<img src=/icons/twitter.png height=16px weight=16px>"
+    url = "https://github.com/carlosonunez"
+    weight = -5
