Add GitHub links for every post.

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -16,6 +16,13 @@
       <strong>Reading Time</strong>: <em>Approximately {{ .ReadingTime }} minutes.</em>
       </span>
     </section>
+    <section class="post-github-link">
+      <span style="color: gray; font-size: 0.8rem;">
+        <a href="https://github.com/carlosonunez/blog.carlosnunez.me/blob/master/content/post/{{.Slug}}.md">
+          <strong><em>View this post on GitHub</em></strong>.
+        </a>
+      </span>
+    </section>
     <section class="post-content">
       {{ .Content }}
     </section>
