Fix syntax that was likely deprecated by future Hugo releases

--- a/config.toml.tmpl
+++ b/config.toml.tmpl
@@ -20,12 +20,14 @@ googleAnalytics = "{{ .Env.HUGO_GOOGLEANALYTICS }}"
   keywords = "keywords"
 [menu]
   [[ menu.main ]]
-    identifier = "about-me" name = "About Me"
+    identifier = "about-me"
+    name = "About Me"
     url = "/about-me"
     weight = -10
 
   [[ menu.main ]]
-    identifier = "talks" name = "Talks"
+    identifier = "talks"
+    name = "Talks"
     url = "/talks"
     weight = -9
 
