Fix og metadata for images and home page descriptions.

--- a/layouts/partials/seo_schema.html
+++ b/layouts/partials/seo_schema.html
@@ -8,10 +8,10 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="{{ .Permalink }}" />
 {{ if not (.IsHome) }}
-<meta property="og:image" content="https://{{ .Permalink }}header.jpg" />
+<meta property="og:image" content="https://{{ replace .Permalink "/post/" "/images/" }}header.jpg" />
 {{ end }}
 <meta property="og:description" content="{{ if .Description }}{{ .Description }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ if .IsHome }}Rambings on DevOps, software and hopefully techy things.{{ end }}{{ end }}{{ end }}" />
-<meta name="description" content="{{ if .Description }}{{ .Description }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ end }}{{ end }}" />
+<meta name="description" content="{{ if .Description }}{{ .Description }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ if .IsHome }}Rambings on DevOps, software and hopefully techy things.{{ end }}{{ end }}{{ end }}" />
 <meta name="author" content="{{ .Site.Params.Author }}" />
 
 <script type="application/ld+json">
