Script and meta tags were in the wrong places.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -37,4 +37,6 @@
     <link rel="stylesheet" href="{{ "/css/" | relURL }}{{ . }}">
     {{ end }}
     <meta name="google-site-verification" content="{{ .Site.Params.GoogleSearchVerificationCode }}" />
+    {{ partial "seo_schema" . }}
+    {{ template "_internal/google_analytics_async.html" . }}
 </head>
