Update post footer.

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -38,19 +38,14 @@
     <hr />
     <h1>About Me</h1>
 
-    <img src="/images/me_20200312.jpg"
-         alt="About Me, last updated: 2020 March 12"
+    <img src="/images/me_20211001.jpg"
+         alt="About Me, last updated: 2021 December 28"
          height=35%
          width=35%>
-
-    <em> My name's <strong>Carlos Nunez</strong>. I am an engineering consultant
-      with <a href="https://contino.io"><strong>Contino</strong></a>, an international
-      DevOps, Cloud and software consultancy whose mission is to help transform every company into a
-      technology-first company through upskilling and world-class engineering.
-      My mission is to help large enterprises close gaps between product,
-      business and engineering so that they can please their customers and make more
-      money. When I'm not with my clients, I enjoy travel, writing, and visiting new
-  breweries, wineries and distilleries. </em>
+    <em>Hi there! My name's <strong>Carlos Nunez</strong>. I'm a solutions architect on the
+    <a href="https://tanzu.vmware.com"><strong>VMware Tanzu</strong></a> team. We make
+    Kubernetes easy and scalable for organizations of all sizes. I enjoy traveling, writing,
+    and visiting new brewereies, wineries and distilleries.</em>
       </section>
       {{ with .Params.keywords -}}
       <p></p>
