Update blog to Hugo v0.94+
`blog-gen` uses Hugo v0.111+ after release `2.2.0`. Update layouts to
use `.RelPermalink` instead of deprecated link fields (`.URL`, `.RSS`,
and so on.)

Signed-off-by: Carlos Nunez <13461447+carlosonunez@users.noreply.github.com>

--- a/layouts/post/summary.html
+++ b/layouts/post/summary.html
@@ -3,7 +3,7 @@
     {{ with .Params.image }}
       <img src="{{ . }}"></img>
     {{ end }}
-		<h2 class="post-title"><a href="{{ .URL }}">{{ .Title }}</a></h2>
+		<h2 class="post-title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
     <p></p>
     <span style="color: gray; font-size: 0.8rem;">
       <strong>Reading Time</strong>: <em>Approximately {{ .ReadingTime }} minutes.</em>
@@ -11,7 +11,7 @@
 	</header>
 	<section class="post-excerpt">
     <p>
-      {{ .Summary }} &hellip; <a class="read-more" href="{{ .URL }}">&raquo;</a>
+      {{ .Summary }} &hellip; <a class="read-more" href="{{ .RelPermalink }}">&raquo;</a>
     </p>
 	</section>
 	<footer class="post-meta">
