[about-me] Update employer
Signed-off-by: Carlos Nunez <13461447+carlosonunez@users.noreply.github.com>

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -42,10 +42,10 @@
          alt="About Me, last updated: 2024 October 4"
          height=35%
          width=35%>
-    <em>Hi there! My name's <strong>Carlos Nunez</strong>. I'm a solutions architect on the
-    <a href="https://tanzu.vmware.com"><strong>VMware Tanzu</strong></a> team. We make
-    Kubernetes easy and scalable for organizations of all sizes. I enjoy traveling, writing,
-    and visiting new brewereies, wineries and distilleries.</em>
+    <em>Hi there! My name's <strong>Carlos Nunez</strong>. I'm a sales engineer at
+    <a href="https://wiz.io">Wiz</a>. I enjoy fitness, minimalist sandals and sneakers, finding <a
+    href="https://kru.org">awesome new radio stations</a>,
+    traveling and visiting new brewereies, wineries and distilleries.</em>
       </section>
       {{ with .Params.keywords -}}
       <p></p>
