[about-me] Update
Signed-off-by: Carlos Nunez <13461447+carlosonunez@users.noreply.github.com>

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -38,13 +38,13 @@
     <hr />
     <h1>About Me</h1>
 
-    <img src="/images/me_20240416.jpg"
-         alt="About Me, last updated: 2024 October 4"
+    <img src="/images/me_20250101.jpg"
+         alt="About Me, last updated: 2025 January 22"
          height=35%
          width=35%>
-    <em>Hi there! My name's <strong>Carlos Nunez</strong>. I'm a sales engineer at
-    <a href="https://wiz.io">Wiz</a>. I enjoy fitness, minimalist sandals and sneakers, finding <a
-    href="https://kru.org">awesome new radio stations</a>,
+    <em>Hi there! My name's <strong>Carlos Nunez</strong>. I'm a solutions architect at
+    <a href="https://redhat.com/openshift">Red Hat</a>. I enjoy fitness, minimalist sandals and sneakers, finding <a
+    href="https://ktru.org">awesome new radio stations</a>,
     traveling and visiting new brewereies, wineries and distilleries.</em>
       </section>
       {{ with .Params.keywords -}}
