[chore] update about-me content
Signed-off-by: Carlos Nunez <13461447+carlosonunez@users.noreply.github.com>

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -38,8 +38,8 @@
     <hr />
     <h1>About Me</h1>
 
-    <img src="/images/me_20250101.jpg"
-         alt="About Me, last updated: 2025 January 22"
+    <img src="/images/me_20251016.png"
+         alt="About Me, last updated: 2025 December 18"
          height=35%
          width=35%>
     <em>Hi there! My name's <strong>Carlos Nunez</strong>. I'm a solutions architect at
